negotiator/negotiator-deployment-template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: negotiator
spec:
  replicas: 1
  minReadySeconds: 30
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      service: negotiator
  template:
    metadata:
      labels:
        service: negotiator
    spec:  
      containers:
      - name: negotiator
        image: eucaim.cancerimage.eu:10443/library/negotiator-v2-eucaim:2.8.3
        imagePullPolicy: Always
        securityContext:
          runAsUser: 1001
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "125m"
            memory: "512Mi"
          limits:
            cpu: "0.2"
            memory: "1Gi"
      volumes:  
      - name: data
        persistentVolumeClaim:
          claimName: negotiator-db-pvc
