negotiator/negotiator-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: negotiator-db
spec:
  type: LoadBalancer
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
      protocol: TCP
  selector:
    service: negotiator-db
