negotiator/negotiator-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: negotiator
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30015
  selector:
    service: negotiator
